--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -1,8 +1,10 @@
 .btn-search {
-  height: 40px;
-  width: 180px;
+  height: 45px;
+  width: 185px;
   align-self: center;
   border: none;
   border-radius: 25px;
   text-decoration: none;
+  color: #fff;
+  background-color: $primary-color;
 }
