--- a/sass/directory/layout/_footer.scss
+++ b/sass/directory/layout/_footer.scss
@@ -1,7 +1,16 @@
 .footer {
   width: 100%;
+  padding: 20px;
   background-color: grey;
+
   img {
     width: 100px;
+    margin-bottom: 15px;
+  }
+  .liste-footer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    color: #fff;
   }
 }
