--- a/sass/directory/layout/_footer.scss
+++ b/sass/directory/layout/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  width: 100%;
   padding: 20px;
   background-color: grey;
 
@@ -14,3 +13,8 @@
     color: #fff;
   }
 }
+
+/* .fa-utensils,
+  .fa-hands-helping {
+    padding-right: 5px;
+  } */
