--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -1,10 +1,28 @@
-.btn-search {
+.btn {
   height: 45px;
   width: 185px;
-  align-self: center;
   border: none;
   border-radius: 25px;
   text-decoration: none;
+  font-weight: bold;
   color: #fff;
   background-color: $primary-color;
+  &--search {
+    align-self: center;
+  }
+  &--commander {
+    align-self: center;
+    margin: 35px 0;
+  }
+}
+
+.btn-menu {
+  width: 55px;
+  background-color: $tertiary-color;
+  color: #fff;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 0 15px 15px 0;
 }
