--- a/sass/directory/layout/_header.scss
+++ b/sass/directory/layout/_header.scss
@@ -1,10 +1,16 @@
 .header {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  a {
+    margin: auto 20px;
+  }
   .logo {
     width: 10em;
-    margin: 20px auto;
-    align-self: center;
+    &--acceuil {
+      margin: 20px auto;
+    }
+    &--restaurant {
+      margin: 20px 30px 20px 30px;
+    }
   }
 }
