--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -34,12 +34,10 @@ a:active {
   width: 185px;
   border: none;
   border-radius: 25px;
-  text-decoration: none;
   font-weight: bold;
+  text-align: center;
   color: #fff;
   background-color: #9356dc;
-}
-.btn--search {
   align-self: center;
 }
 .btn--commander {
@@ -58,19 +56,6 @@ a:active {
   border-radius: 0 15px 15px 0;
 }
 
-/* .btn-menu {
-    display: none;
-    :hover {
-      width: 55px;
-      background-color: $tertiary-color;
-      color: #fff;
-      padding: 12px 16px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      border-radius: 0 15px 15px 0;
-    }
-  } */
 .fa-arrow-left {
   font-size: 1.5em;
 }
@@ -89,6 +74,8 @@ form {
 }
 
 .menu-main {
+  display: flex;
+  flex-direction: column;
   padding: 20px 10px 50px 10px;
   background-color: #efefef;
   border-radius: 25px 25px 0 0;
@@ -100,48 +87,44 @@ form {
   margin-left: auto;
 }
 
-.article-menu {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
-.article-menu .liste-menu {
-  display: flex;
-  flex-direction: column;
-  row-gap: 15px;
-}
-.article-menu .liste-menu .menu {
-  display: grid;
-  grid-template-areas: "h3  button" "price button";
-  height: 60px;
+.article-menu ul li {
   background-color: #fff;
-  border-radius: 15px;
-  border: none;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  display: flex;
+  overflow: hidden;
 }
-.article-menu .liste-menu .menu:hover + .btn-menu {
-  display: none;
+.article-menu ul li:hover {
+  cursor: pointer;
 }
-.article-menu .liste-menu .menu h3 {
-  grid-area: h3;
+.article-menu ul li:hover button {
+  margin-right: 0;
 }
-.article-menu .liste-menu .menu .menu-content {
+
+.article-menu ul li article {
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
+  width: 95%;
+  padding: 10px 0 10px 10px;
+}
+
+.article-menu ul li article .menu-content {
   display: flex;
   justify-content: space-between;
-  grid-area: price;
 }
-.article-menu .liste-menu .menu .menu-content p {
+
+.menu-content p {
   font-size: 13px;
-  /*  grid-area: p; */
 }
-.article-menu .liste-menu .menu .menu-content span {
-  /* grid-area: price; */
-  font-weight: bold;
-  justify-self: end;
+
+.article-menu ul li article .menu-content span {
+  padding-right: 5px;
 }
-.article-menu .liste-menu .menu button {
-  grid-area: button;
-  justify-self: end;
+
+.article-menu ul li button {
+  margin-right: -55px;
+  transition: all 0.4s;
 }
 
 .search-restaurant {
@@ -168,44 +151,63 @@ form {
   text-align: center;
 }
 
+/* .fonctionnement {
+  padding: 30px 10px;
+
+  .liste-fonctionnement {
+    display: flex;
+    row-gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    li::marker {
+      background: $primary-color;
+    }
+    li {
+      width: 90%;
+      .step {
+        display: flex;
+        justify-content: center;
+        height: 65px;
+        border-radius: 12px;
+        text-align: center;
+        position: relative;
+        background-color: $light-grey;
+        .fa-store,
+        .fa-list-ul,
+        .fa-mobile-alt {
+          color: grey;
+          align-self: center;
+          position: absolute;
+          left: 30px;
+        }
+        p {
+          font-weight: bold;
+          padding-top: 25px;
+        }
+      }
+    }
+  }
+} */
 .fonctionnement {
   padding: 30px 10px;
 }
-.fonctionnement .liste-fonctionnement {
+
+.liste-fonctionnement {
   display: flex;
-  row-gap: 20px;
-  flex-wrap: wrap;
+  margin-top: 10px;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  row-gap: 10px;
 }
-.fonctionnement .liste-fonctionnement li::marker {
-  background: #9356dc;
-}
-.fonctionnement .liste-fonctionnement li {
-  width: 90%;
-}
-.fonctionnement .liste-fonctionnement li fieldset {
-  text-align: center;
-}
-.fonctionnement .liste-fonctionnement li .step {
+.liste-fonctionnement li {
+  height: 60px;
+  width: 80%;
   display: flex;
-  justify-content: center;
-  height: 65px;
-  border-radius: 12px;
-  text-align: center;
-  position: relative;
+  border-radius: 10px;
   background-color: #efefef;
-}
-.fonctionnement .liste-fonctionnement li .step .fa-store,
-.fonctionnement .liste-fonctionnement li .step .fa-list-ul,
-.fonctionnement .liste-fonctionnement li .step .fa-mobile-alt {
-  color: grey;
-  align-self: center;
-  position: absolute;
-  left: 30px;
-}
-.fonctionnement .liste-fonctionnement li .step p {
-  font-weight: bold;
-  padding-top: 25px;
+  justify-content: center;
+  align-items: center;
 }
 
 .restaurant {
