--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -3,13 +3,11 @@
   width: 185px;
   border: none;
   border-radius: 25px;
-  text-decoration: none;
   font-weight: bold;
+  text-align: center;
   color: #fff;
   background-color: $primary-color;
-  &--search {
-    align-self: center;
-  }
+  align-self: center;
   &--commander {
     align-self: center;
     margin: 35px 0;
@@ -26,17 +24,3 @@
   border: none;
   border-radius: 0 15px 15px 0;
 }
-
-/* .btn-menu {
-    display: none;
-    :hover {
-      width: 55px;
-      background-color: $tertiary-color;
-      color: #fff;
-      padding: 12px 16px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      border-radius: 0 15px 15px 0;
-    }
-  } */
