--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -22,44 +22,6 @@
   }
 }
 
-/* .fonctionnement {
-  padding: 30px 10px;
-
-  .liste-fonctionnement {
-    display: flex;
-    row-gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    li::marker {
-      background: $primary-color;
-    }
-    li {
-      width: 90%;
-      .step {
-        display: flex;
-        justify-content: center;
-        height: 65px;
-        border-radius: 12px;
-        text-align: center;
-        position: relative;
-        background-color: $light-grey;
-        .fa-store,
-        .fa-list-ul,
-        .fa-mobile-alt {
-          color: grey;
-          align-self: center;
-          position: absolute;
-          left: 30px;
-        }
-        p {
-          font-weight: bold;
-          padding-top: 25px;
-        }
-      }
-    }
-  }
-} */
-
 .fonctionnement {
   padding: 30px 10px;
 }
@@ -70,15 +32,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 10px;
+  row-gap: 15px;
   li {
     height: 60px;
-    width: 80%;
+    width: 90%;
     display: flex;
     border-radius: 10px;
     background-color: $light-grey;
     justify-content: center;
     align-items: center;
+    @extend .shadow;
   }
 }
 
@@ -123,6 +86,7 @@
       padding: 10px 10px 10px 10px;
       background-color: #fff;
       border-radius: 0 0 15px 15px;
+      @extend .shadow;
       .fa-heart {
         font-size: 1.5em;
         position: absolute;
