--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "directory/base/_base.scss";
 @import "directory/component/_variables.scss";
 @import "directory/component/_component.scss";
+@import "directory/component/_mixin.scss";
 @import "directory/pages/_restaurant-page.scss";
 @import "directory/pages/_acceuil.scss";
 @import "directory/layout/_header.scss";
