--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -12,6 +12,8 @@
     align-self: center;
     margin: 35px 0;
   }
+  &:hover {
+  }
 }
 
 .btn-menu {
@@ -23,4 +25,20 @@
   cursor: pointer;
   border: none;
   border-radius: 0 10px 10px 0;
+}
+
+i.far {
+  color: $primary-color;
+  &:hover {
+    display: none;
+  }
+}
+
+i.fas {
+  display: none;
+  color: $primary-color;
+  &:hover {
+    display: block;
+    color: $primary-color;
+  }
 }
