--- a/sass/directory/component/_mixin.scss
+++ b/sass/directory/component/_mixin.scss
@@ -1,3 +1,7 @@
 .shadow {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
+
+@mixin btn-color {
+  background: linear-gradient(170deg, $secondary-color, 30%, $primary-color);
+}
