--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -45,6 +45,13 @@
   }
 }
 
+.fa-mobile-alt,
+.fa-list-ul,
+.fa-store {
+  margin-right: 20px;
+  color: $primary-color;
+}
+
 .restaurant {
   background-color: $light-grey;
   h2 {
@@ -73,7 +80,8 @@
       top: 10px;
       right: 10px;
       border-radius: 3px;
-      color: #fff;
+      font-weight: bold;
+      color: darken($color: $tertiary-color, $amount: 40);
       background-color: $tertiary-color;
     }
     img {
