avancement sur la version tablette du site

--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -12,8 +12,6 @@
     align-self: center;
     margin: 35px 0;
   }
-  &:hover {
-  }
 }
 
 .btn-menu {
@@ -27,7 +25,7 @@
   border-radius: 0 10px 10px 0;
 }
 
-i.far {
+/* i.far {
   color: $primary-color;
   &:hover {
     display: none;
@@ -41,4 +39,4 @@ i.fas {
     display: block;
     color: $primary-color;
   }
-}
+} */
