--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -44,6 +44,7 @@ a:active {
   align-self: center;
   margin: 35px 0;
 }
+
 .btn-menu {
   width: 55px;
   background-color: #99e2d0;
@@ -55,22 +56,21 @@ a:active {
   border-radius: 0 10px 10px 0;
 }
 
-i.far {
-  color: #9356dc;
-}
-i.far:hover {
-  display: none;
+/* i.far {
+  color: $primary-color;
+  &:hover {
+    display: none;
+  }
 }
 
 i.fas {
   display: none;
-  color: #9356dc;
-}
-i.fas:hover {
-  display: block;
-  color: #9356dc;
-}
-
+  color: $primary-color;
+  &:hover {
+    display: block;
+    color: $primary-color;
+  }
+} */
 .shadow, .li-restaurant .card-restaurant figcaption, .liste-fonctionnement li, .article-menu ul li {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -258,6 +258,40 @@ form {
   top: 35%;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .liste-restaurant {
+    padding-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 30px;
+    column-gap: 20px;
+  }
+
+  .li-restaurant {
+    width: 45%;
+    margin-bottom: 50px;
+  }
+
+  .liste-fonctionnement {
+    display: flex;
+    margin-top: 10px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    row-gap: 15px;
+    column-gap: 15px;
+  }
+  .liste-fonctionnement li {
+    height: 115px;
+    width: 30%;
+    display: flex;
+    border-radius: 10px;
+    background-color: #efefef;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .header {
   width: 100%;
   display: flex;
@@ -290,9 +324,21 @@ form {
   color: #fff;
 }
 
-/* .fa-utensils,
-  .fa-hands-helping {
-    padding-right: 5px;
-  } */
+@media screen and (min-width: 500px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer .footer img {
+    align-self: center;
+  }
+
+  .footer .liste-footer {
+    display: flex;
+    flex-direction: row;
+    row-gap: 5px;
+    color: #fff;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
