--- a/sass/directory/layout/_footer.scss
+++ b/sass/directory/layout/_footer.scss
@@ -27,8 +27,7 @@
     .liste-footer {
       display: flex;
       flex-direction: row;
-      row-gap: 5px;
-
+      justify-content: space-around;
       color: #fff;
     }
   }
