--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -23,6 +23,8 @@
 }
 
 .fonctionnement {
+  display: flex;
+  flex-direction: column;
   padding: 30px 10px;
 }
 
@@ -53,6 +55,8 @@
 }
 
 .restaurant {
+  display: flex;
+  flex-direction: column;
   background-color: $light-grey;
   h2 {
     padding: 40px 0 15px 18px;
@@ -94,18 +98,29 @@
       padding: 10px 10px 10px 10px;
       background-color: #fff;
       border-radius: 0 0 15px 15px;
+      overflow-y: hidden;
       @extend .shadow;
-      .fa-heart {
+      .far {
         font-size: 1.5em;
         position: absolute;
         right: 15px;
         top: 35%;
       }
+      /*       .fas {
+        font-size: 1.5em;
+        position: absolute;
+        right: 15px;
+        bottom: -38%;
+        color: $primary-color;
+      } */
     }
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  h2 {
+    align-self: center;
+  }
   .liste-restaurant {
     padding-bottom: 50px;
     display: flex;
@@ -137,6 +152,10 @@
       justify-content: center;
       align-items: center;
       @extend .shadow;
+    }
+  }
+  .card-restaurent {
+    .fas {
     }
   }
 }
