Avancement css generale

--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -44,6 +44,9 @@ a:active {
   align-self: center;
   margin: 35px 0;
 }
+.btn:hover {
+  background-color: 60%;
+}
 
 .btn-menu {
   width: 55px;
@@ -71,7 +74,7 @@ i.fas {
     color: $primary-color;
   }
 } */
-.shadow, .li-restaurant .card-restaurant figcaption, .liste-fonctionnement li, .article-menu ul li {
+.shadow, .li-restaurant .card-restaurant figcaption, .liste-fonctionnement li, .article-menu ul li, .btn {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
@@ -122,10 +125,10 @@ form {
   display: flex;
   overflow: hidden;
 }
-.article-menu ul li:hover {
+.article-menu ul li:active {
   cursor: pointer;
 }
-.article-menu ul li:hover button {
+.article-menu ul li:active button {
   margin-right: 0;
 }
 
@@ -155,9 +158,9 @@ form {
   transition: all 0.4s;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) {
   h1 {
-    margin-left: 42%;
+    margin-left: 46%;
   }
 
   .article-menu {
@@ -177,7 +180,7 @@ form {
     flex-wrap: wrap;
   }
   .liste-menu .menu {
-    width: 48%;
+    width: 44%;
   }
 }
 .search-restaurant {
@@ -226,6 +229,7 @@ form {
   background-color: #efefef;
   justify-content: center;
   align-items: center;
+  font-weight: bold;
 }
 
 .fa-mobile-alt,
@@ -282,13 +286,6 @@ form {
   background-color: #fff;
   border-radius: 0 0 15px 15px;
   overflow-y: hidden;
-  /*       .fas {
-    font-size: 1.5em;
-    position: absolute;
-    right: 15px;
-    bottom: -38%;
-    color: $primary-color;
-  } */
 }
 .li-restaurant .card-restaurant figcaption .far {
   font-size: 1.5em;
@@ -297,7 +294,7 @@ form {
   top: 35%;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) {
   h2 {
     align-self: center;
   }
@@ -308,11 +305,11 @@ form {
     flex-wrap: wrap;
     justify-content: center;
     row-gap: 30px;
-    column-gap: 20px;
+    column-gap: 65px;
   }
 
   .li-restaurant {
-    width: 45%;
+    width: 33%;
     margin-bottom: 50px;
   }
 
@@ -335,6 +332,13 @@ form {
     align-items: center;
   }
 }
+/* @media screen and (min-width: 1025px) {
+  .card-restaurant {
+    img {
+      height: 96%;
+    }
+  }
+} */
 .header {
   display: flex;
 }
@@ -376,10 +380,6 @@ form {
     display: flex;
     flex-direction: column;
   }
-  .footer .footer img {
-    align-self: center;
-  }
-
   .footer .liste-footer {
     display: flex;
     flex-direction: row;
