--- a/sass/directory/component/_variables.scss
+++ b/sass/directory/component/_variables.scss
@@ -2,3 +2,4 @@ $primary-color: #9356dc;
 $secondary-color: #ff79da;
 $tertiary-color: #99e2d0;
 $light-grey: #efefef;
+$btn-color: linear-gradient(170deg, $secondary-color, 30%, $primary-color);
